--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="container">
-        <form action="/api/productos" method="POST">
+        <form action="/api/productos" method="post">
             <h2>Ingresar nuevo producto</h2>
             <div class="border">
             <p>Nombre: <input type="text" name="title"></p>
@@ -22,7 +22,7 @@
             <div class="border">
             <p>Descripción: <input type="text" name="description"></p>
             </div>
-            <button id="enviar" class="btn">Enviar</button>
+            <button type="submit" id="enviar" class="btn">Enviar</button>
         </form>
     </div>
 </body>
